[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.13", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
clap_derive = "4.5.13"
regex = "1.10.6"
